Flight test direct flight, no direct fligh available and multi-hop flight
TODO Round Trip flight not hops
TODO No Connecting flights within time parameters
TODO Round Trip with multi-hop